<resources>
    <string name="app_name">TokoApps</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="logo">logo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account </string>
    <string name="register"> | Register</string>
    <string name="login">Login</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="email">Email</string>
    <string name="alamat">Alamat</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="sigin">Sigin</string>
    <string name="sudah_punya_akun">Sudah punya akun? |</string>
    <string name="exit">Exit</string>
    <string name="about_app">About App</string>
    <string name="laporan_barang">Laporan Barang</string>
    <string name="entry_barang">Entry Barang</string>
    <string name="nama_barang">Nama Barang</string>
    <string name="harga_beli">Harga Beli</string>
    <string name="proses">Proses</string>
    <string name="harga_jual">Harga Jual</string>
    <string name="jumlah">Jumlah</string>
    <string name="entry_by">Entry by</string>
    <string name="save">SAVE</string>
    <string name="id_barang">Id Barang</string>
</resources>