<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_entrybarang"
            android:icon="@drawable/ic_entry"
            android:title="@string/entry_barang" />
        <item
            android:id="@+id/nav_laporanbarang"
            android:icon="@drawable/ic_laporan"
            android:title="@string/laporan_barang" />
        <item
            android:id="@+id/nav_aboutapp"
            android:icon="@drawable/ic_about"
            android:title="@string/about_app" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_exit"
            android:title="@string/exit" />
    </group>
</menu>