<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:contentDescription="@string/logo"
        android:id="@+id/img_logo"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:src="@drawable/login"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:id="@+id/linear"
        android:background="@drawable/ic_launcher_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/img_logo"
        android:paddingTop="15dp"
        android:paddingBottom="35dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfusername"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxBackgroundColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <EditText
                android:autofillHints="@string/username"
                android:id="@+id/edt_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:drawableStart="@drawable/ic_username"
                android:drawablePadding="12dp"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfpassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxBackgroundColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleContentDescription="show"
            app:passwordToggleEnabled="true"
            app:passwordToggleDrawable="@drawable/ic_eye">

            <EditText
                android:autofillHints="@string/password"
                android:id="@+id/edt_password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="12dp" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/linear"
        android:layout_marginTop="-30dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:backgroundTint="#C64CAF50"
        android:textColor="@color/white"
        android:text="@string/login" />

    <RelativeLayout
        android:layout_centerInParent="true"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv01"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"/>

        <TextView
            android:id="@+id/tvregister"
            android:layout_toEndOf="@+id/tv01"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="#3F51B5"/>

    </RelativeLayout>

</RelativeLayout>