<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.entrybarang.EntryBarangFragment">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/text_entrybarang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_entry_by"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxBackgroundColor="@color/white"
            android:layout_width="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <EditText
                android:autofillHints="@string/entry_by"
                android:id="@+id/edt_entryby"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/entry_by"
                android:drawableStart="@drawable/ic_search"
                android:drawablePadding="12dp"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_namabarang"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxBackgroundColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:autofillHints="@string/nama_barang"
                android:id="@+id/edt_namabarang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nama_barang"
                android:drawableStart="@drawable/ic_nama"
                android:drawablePadding="12dp"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_hargabeli"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxBackgroundColor="@color/white"
            android:layout_width="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <EditText
                android:autofillHints="@string/harga_beli"
                android:id="@+id/edt_hargabeli"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/harga_beli"
                android:drawableStart="@drawable/ic_harga"
                android:drawablePadding="12dp"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_jumlah"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxBackgroundColor="@color/white"
            android:layout_width="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <EditText
                android:autofillHints="@string/jumlah"
                android:id="@+id/edt_jumlah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/jumlah"
                android:drawableStart="@drawable/ic_cart"
                android:drawablePadding="12dp"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_proses"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="190dp"
            android:backgroundTint="#F26968"
            android:layout_marginBottom="10dp"
            android:text="@string/proses"
            android:textColor="@android:color/white"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/linear_proses"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxBackgroundColor="@color/white"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <EditText
                android:autofillHints="@string/harga_jual"
                android:id="@+id/edt_hargajual"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/harga_jual"
                android:drawableStart="@drawable/ic_jual"
                android:drawablePadding="12dp"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="190dp"
            android:backgroundTint="#F26968"
            android:layout_marginBottom="10dp"
            android:text="@string/save"
            android:textColor="@android:color/white"/>
    </LinearLayout>

</ScrollView>